[gd_scene load_steps=4 format=3 uid="uid://7efvugkjmlkm"]

[ext_resource type="Script" path="res://scenes/MainMenu/main_menu.gd" id="1_8vw3y"]
[ext_resource type="Theme" uid="uid://m0avgysysptt" path="res://res/scoreboard_theme.tres" id="2_x6ywm"]
[ext_resource type="PackedScene" uid="uid://o2v7txet85ti" path="res://scenes/MenuBackground/menu_background.tscn" id="3_yay7v"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_8vw3y")

[node name="ParallaxBackground" parent="." instance=ExtResource("3_yay7v")]
speed = 250
direction = Vector2(-1, 0.5)

[node name="StartButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 621.0
offset_top = 468.0
offset_right = 1374.0
offset_bottom = 703.0
theme = ExtResource("2_x6ywm")
theme_override_font_sizes/font_size = 80
toggle_mode = true
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 746.0
offset_top = 779.0
offset_right = 1242.0
offset_bottom = 958.0
theme = ExtResource("2_x6ywm")
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="NValueInput" type="SpinBox" parent="."]
unique_name_in_owner = true
offset_left = 621.0
offset_top = 312.0
offset_right = 1392.0
offset_bottom = 392.0
min_value = 1.0
max_value = 20.0
value = 1.0
rounded = true
alignment = 1
prefix = "N Value -"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="NValueInput" to="." method="_on_n_value_input_value_changed"]
